...
            IconButton(
                onClick = { navController.navigate(NavRoutes.CREATE_GROUP) },
                modifier = Modifier.size(48.dp),
            ) {
                Icon(
                    Icons.Filled.Add,
                    "Create Group",
                    tint = MaterialTheme.colorScheme.primary,
                )
            }
            IconButton(
                onClick = { navController.navigate(NavRoutes.JOIN_GROUP) },
                modifier = Modifier.size(48.dp),
...
                groups.forEach { group ->
                    Card(
                        onClick = { onGroupClick(group.joinCode) },
                        modifier =
                            Modifier
                                .fillMaxWidth()
                                .testTag("groupButton"),
                        colors =
                            CardDefaults.cardColors(
                                containerColor = MaterialTheme.colorScheme.primaryContainer,
                                contentColor = MaterialTheme.colorScheme.onPrimaryContainer,
                            ),
                        elevation =
...
